# IdeaChess

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/private/: Application.cpp  ChessBoard.cpp  ChessBoardView.cpp  Input.cpp  Renderer.cpp  Texture.cpp  Vector2Int.cpp  Window.cpp  main.cpp
src/private/PieceMovements/: BishopMovesGenerator.cpp  KingMovesGenerator.cpp  NightMovesGenerator.cpp  PawnMovesGenerator.cpp  PieceMoves.cpp  PieceMovesGenerator.cpp  QueenMovesGenerator.cpp  RookMovesGenerator.cpp
src/public/: Application.h  ChessBoard.h  ChessBoardDefinitions.h  ChessBoardView.h  Color.h  Event.h  Input.h  Rect.h  Renderer.h  Texture.h  Vector2Int.h  Window.h
src/public/PieceMovements/: BishopMovesGenerator.h  KingMovesGenerator.h  NightMovesGenerator.h  PawnMovesGenerator.h  PieceMoves.cpp  PieceMoves.h  PieceMovesGenerator.cpp  PieceMovesGenerator.h  QueenMovesGenerator.h  RookMovesGenerator.h
